--- a/index.htm
+++ b/index.htm
@@ -8,24 +8,77 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <div class="wrap">
         <section class="section1">
-            <div class="container">
+            <div class="container-lg container-todo-list">
                 <div class="heading">
                     <h1>My tasks</h1>
                 </div>
-                
+
                 <div class="row todo-list">
-                    <div class="col-sm-12 col-lg-6">Lorem.</div>
-                    <div class="col-sm-12 col-lg-6">Dignissimos?</div>
-                    <div class="col-sm-12 col-lg-6">Qui?</div>
-                    <div class="col-sm-12 col-lg-6">Facere.</div>
+                    <div class="col-sm-12 col-md-10 col-lg-3">
+                        <div class="todo-container">
+                            <div class="checkbox">
+                                <div class="box">
+
+                                </div>
+                            </div>
+                            <div class="todo-texts">
+                                <h2>asd</h2>
+                                <h3>asdasda</h3>
+                            </div>
+                            <div class="todo-star">
+                                <div class="star-five">
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-10 col-lg-3">
+                        <div class="todo-container">
+                            <div class="checkbox">
+                                <div class="box">
+
+                                </div>
+                            </div>
+                            <div class="todo-texts">
+                                <h2>asd</h2>
+                                <h3>asdasda</h3>
+                            </div>
+                            <div class="todo-star">
+                                <div class="star-five">
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-10 col-lg-3">
+                        <div class="todo-container">
+                            <div class="checkbox">
+                                <div class="box">
+
+                                </div>
+                            </div>
+                            <div class="todo-texts">
+                                <h2>asd</h2>
+                                <h3>asdasda</h3>
+                            </div>
+                            <div class="todo-star">
+                                <div class="star-five">
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="col-sm-12 col-lg-6">Facere.</div> -->
                 </div>
             </div>
         </section>
